--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/app.css?20180713">
+    <link rel="stylesheet" href="./css/app.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/brands.css" integrity="sha384-7xAnn7Zm3QC1jFjVc1A6v/toepoG3JXboQYzbM0jrPzou9OFXm/fY6Z/XiIebl/k"
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/fontawesome.css" integrity="sha384-ozJwkrqb90Oa3ZNb+yKFW2lToAWYdTiF1vt8JiH5ptTGHTGcN7qdoR1F95e0kYyG"
@@ -15,10 +15,10 @@
     <div class="container">
         <nav class="nav" id="nav">
             <a href="#quem" class="nav__item">Ümbar</a>
-            <a href="#onde" class="nav__item">Como chegar</a>
             <a href="#aprenda" class="nav__item">Aprenda a fazer drinks</a>
             <a href="#evento" class="nav__item">Seu evento aqui</a>
-            <a href="#horarios" class="nav__item">Horários de funcionamento</a>
+            <a href="#onde" class="nav__item">Como chegar</a>
+            <a href="#horarios" class="nav__item">Horários</a>
             <a href="#contato" class="nav__item">Contato</a>
             <a href="#fotos" class="nav__item">Fotos</a>
         </nav>
@@ -317,6 +317,6 @@
         </footer>
     </div>
 
-    <script src="js/app.js?20180713"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
