Links no meio do conteúdo

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <p>Quer aprender a produzir coqueteis junto com a sua turma? Vem pro Ümbar! Inscreva-se nos módulos de Aulas em Turma e assuma
                     a nossa barra!</p>
 
-                    <p><a href="/#/contato">Consulte nossa equipe</a> para saber mais sobre os cursos e disponibilidade de datas.</p>
+                    <p><a href="#contato" class="-nav_item">Consulte nossa equipe</a> para saber mais sobre os cursos e disponibilidade de datas.</p>
                 </div>
             </div>
 
@@ -151,7 +151,7 @@
                 </h1>
 
                 <div class="content">
-                    <p>Que tal reunir os amigos, comemorar o aniversário, fazer um happy hour da galera curtindo uma nova experiência? <a href="/#/contato"></a>Consulte
+                    <p>Que tal reunir os amigos, comemorar o aniversário, fazer um happy hour da galera curtindo uma nova experiência? <a href="#contato" class="-nav_item">Consulte
                     a casa para reservas</a>.</p>
 
                     <p>Todas as reservas ganham <strong>welcome drink</strong>* cortesia para toda a lista de convidados* ou brinde especial para o aniversariante*</p>
@@ -177,19 +177,29 @@
 
         <section class="block module" id="section_onde">
             <h2 class="title">Onde estamos</h2>
-            <address class="content">
-                 Rua Costa Aguiar, 1482<br>
-                 Ipiranga, São Paulo
-            </address>
-            <p class="content h-mobile-only">
-                <strong>Me leva de...</strong><br>
-                <a href="https://m.uber.com/ul/?action=setPickup&dropoff[latitude]=-23.587070&dropoff[longitude]=-46.606384&dropoff[nickname]=%C3%9Cmbar&dropoff[formatted_address]=Rua%20Costa%20Aguiar%2C%201482%20-%20Ipiranga%2C%20S%C3%A3o%20Paulo">Uber</a>, 
-                <a href="https://waze.com/ul?ll=-23.587070,-46.606384&navigate=yes">Waze</a>, 
-                <a href="https://www.google.com.br/maps/place/Rua+Costa+Aguiar,+1482+-+Ipiranga,+São+Paulo+-+SP,+04204-001/@-23.5870698,-46.6085729,17z/data=!4m13!1m7!3m6!1s0x94ce5bef6bc11da3:0x5866b38d3c99475d!2sRua+Costa+Aguiar,+1482+-+Ipiranga,+São+Paulo+-+SP,+04204-001!3b1!8m2!3d-23.5870698!4d-46.6063842!3m4!1s0x94ce5bef6bc11da3:0x5866b38d3c99475d!8m2!3d-23.5870698!4d-46.6063842">Google Maps</a>.
-            </p>
-            <p class="content h-desktop-only">
-                <a href="https://www.google.com.br/maps/place/Rua+Costa+Aguiar,+1482+-+Ipiranga,+São+Paulo+-+SP,+04204-001/@-23.5870698,-46.6085729,17z/data=!4m13!1m7!3m6!1s0x94ce5bef6bc11da3:0x5866b38d3c99475d!2sRua+Costa+Aguiar,+1482+-+Ipiranga,+São+Paulo+-+SP,+04204-001!3b1!8m2!3d-23.5870698!4d-46.6063842!3m4!1s0x94ce5bef6bc11da3:0x5866b38d3c99475d!8m2!3d-23.5870698!4d-46.6063842" target="_blank">Ver no mapa</a>.
-            </p>
+            <div class="content">
+                <p>
+                    <address>
+                        Rua Costa Aguiar, 1482
+                        <br> Ipiranga, São Paulo
+                    </address>
+                </p>
+
+                <p class="h-mobile-only">
+                    <strong>Me leva de...</strong>
+                    <br>
+                    <a href="https://m.uber.com/ul/?action=setPickup&dropoff[latitude]=-23.587070&dropoff[longitude]=-46.606384&dropoff[nickname]=%C3%9Cmbar&dropoff[formatted_address]=Rua%20Costa%20Aguiar%2C%201482%20-%20Ipiranga%2C%20S%C3%A3o%20Paulo">Uber</a>,
+                    <a href="https://waze.com/ul?ll=-23.587070,-46.606384&navigate=yes">Waze</a>,
+                    <a href="https://www.google.com.br/maps/place/Rua+Costa+Aguiar,+1482+-+Ipiranga,+São+Paulo+-+SP,+04204-001/@-23.5870698,-46.6085729,17z/data=!4m13!1m7!3m6!1s0x94ce5bef6bc11da3:0x5866b38d3c99475d!2sRua+Costa+Aguiar,+1482+-+Ipiranga,+São+Paulo+-+SP,+04204-001!3b1!8m2!3d-23.5870698!4d-46.6063842!3m4!1s0x94ce5bef6bc11da3:0x5866b38d3c99475d!8m2!3d-23.5870698!4d-46.6063842">Google Maps</a>.
+                </p>
+
+                <p class="h-desktop-only">
+                    <a href="https://www.google.com.br/maps/place/Rua+Costa+Aguiar,+1482+-+Ipiranga,+São+Paulo+-+SP,+04204-001/@-23.5870698,-46.6085729,17z/data=!4m13!1m7!3m6!1s0x94ce5bef6bc11da3:0x5866b38d3c99475d!2sRua+Costa+Aguiar,+1482+-+Ipiranga,+São+Paulo+-+SP,+04204-001!3b1!8m2!3d-23.5870698!4d-46.6063842!3m4!1s0x94ce5bef6bc11da3:0x5866b38d3c99475d!8m2!3d-23.5870698!4d-46.6063842"
+                        target="_blank">Ver no mapa</a>.
+                </p>
+            </div>
+            
+            
         </section>
 
         <section class="block module" id="section_horarios">
