Adiciona tags OG do Facebook

--- a/index.html
+++ b/index.html
@@ -10,6 +10,29 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/fontawesome.css" integrity="sha384-ozJwkrqb90Oa3ZNb+yKFW2lToAWYdTiF1vt8JiH5ptTGHTGcN7qdoR1F95e0kYyG"
         crossorigin="anonymous">
     <title>Ümbar</title>
+
+    <meta property="og:url" content="https://www.umbar.com.br"
+    />
+    <meta property="og:type" content="restaurant.restaurant" />
+    <meta property="og:title" content="Ümbar - Uma nova experiência de coquetelaria no Ipiranga" />
+    <meta property="og:description" content="Ambiente aconchegante, no coração de São Paulo em um dos bairros mais tradicionais da cidade, feito para você se sentir em casa e aproveitar toda a energia que uma barra pode te proporcionar" />
+    <meta property="og:image" content="https://www.umbar.com.br/images/facebook-share--1080.jpg" />
+
+    <meta property="restaurant:contact_info:street_address" content="Rua Costa Aguiar, 1482" />
+    <meta property="restaurant:contact_info:locality" content="São Paulo" />
+    <meta property="restaurant:contact_info:region" content="São Paulo" />
+    <meta property="restaurant:contact_info:postal_code" content="04204-001" />
+    <meta property="restaurant:contact_info:country_name" content="Brasil" />
+    <meta property="restaurant:contact_info:email" content="umbar.drinks&#064;gmail.com" />
+    <meta property="restaurant:contact_info:phone_number" content="11 2061-4764" />
+    <meta property="restaurant:contact_info:website" content="https://www.umbar.com.br" />
+    <meta property="place:location:latitude" content="-23.5870698" />
+    <meta property="place:location:longitude" content="-46.6085729" />
+
+
+
+
+
 </head>
 <body>
     <div class="container">
@@ -315,8 +338,8 @@
 
         <section class="block module">
             <div class="social-media">
-                <a href="#" class="social-media__item"><i class="fab fa-instagram"></i></a>
-                <a href="#" class="social-media__item"><i class="fab fa-facebook-square"></i></a>
+                <a href="https://www.instagram.com/umbardrinks" target="_blank" class="social-media__item"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.facebook.com/Umbar-Casa-de-Drinks-980888288740643/" target="_blank" class="social-media__item"><i class="fab fa-facebook-square"></i></a>
             </div>
         </section>
 
