Muda horário do domingo

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                 </tr>
                 <tr data-day="0">
                     <td>Domingo</td>
-                    <td>14:00 — 20:00</td>
+                    <td>Fechado</td>
                 </tr>
             </table>
         </section>
