--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                 </tr>
                 <tr data-day="0">
                     <td>Domingo</td>
-                    <td>15:00 — 21:00</td>
+                    <td>Fechado</td>
                 </tr>
             </table>
         </section>
