--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         }
 
         img.addEventListener('click', changeChannel);
-        img.addEventListener('touchstart', changeChannel);
+        // img.addEventListener('touchstart', changeChannel);
 
         changeChannel();
     </script>
